baml_language/crates/baml_tests/snapshots/compiles/is_operator/baml_tests__compiles__is_operator__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
function user.both_ints(a: int | string, b: int | string) -> bool  [expr] {
  {  } a is int And b is int
}
function user.classify(v: int | string) -> string  [expr] {
  {  } if (v is int) {  } "number" else {  } "text"
}
function user.is_int(v: int | string) -> bool  [expr] {
  {  } v is int
}
function user.is_int_or_bool(v: int | string | bool) -> bool  [expr] {
  {  } v is int | bool
}
function user.is_not_string(v: int | string) -> bool  [expr] {
  {  } Not v is string
}
function user.is_zero(n: int) -> bool  [expr] {
  {  } n is 0
}
