baml_language/crates/baml_tests/snapshots/compiles/is_operator/baml_tests__compiles__is_operator__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.is_int(v: int | string) -> bool throws never {
  { : bool
    v is int : bool
  }
}
function user.is_not_string(v: int | string) -> bool throws never {
  { : bool
    Not v is string : bool
  }
}
function user.is_int_or_bool(v: int | string | bool) -> bool throws never {
  { : bool
    v is int | bool : bool
  }
}
function user.classify(v: int | string) -> string throws never {
  { : "number" | "text"
    if (v is int : bool) : "number" | "text"
      { : "number"
        "number" : "number"
      }
    else
      { : "text"
        "text" : "text"
      }
  }
}
function user.both_ints(a: int | string, b: int | string) -> bool throws never {
  { : bool
    a is int && b is int : bool
  }
}
function user.is_zero(n: int) -> bool throws never {
  { : bool
    n is 0 : bool
  }
}
